<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/page_margin">

        <TextView
            style="@style/TextAppearance.CruzeiroEcoSul.CardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dicas_subtitulo"
            android:textStyle="normal" />

        <unicsul.pdm.cruzeiroecosul.componentes.CardVertical
            style="@style/Widget.CruzeiroEcoSul.CardVertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chip="@string/dica1_tag"
            app:descricao="@string/dica1_descricao"
            app:imagem="@drawable/hero"
            app:titulo="@string/dica1_titulo" />

        <unicsul.pdm.cruzeiroecosul.componentes.CardVertical
            style="@style/Widget.CruzeiroEcoSul.CardVertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chip="@string/dica2_tag"
            app:descricao="@string/dica2_descricao"
            app:imagem="@drawable/hero"
            app:titulo="@string/dica2_titulo" />

        <unicsul.pdm.cruzeiroecosul.componentes.CardVertical
            style="@style/Widget.CruzeiroEcoSul.CardVertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chip="@string/dica3_tag"
            app:descricao="@string/dica3_descricao"
            app:imagem="@drawable/hero"
            app:titulo="@string/dica3_titulo" />

        <unicsul.pdm.cruzeiroecosul.componentes.CardVertical
            style="@style/Widget.CruzeiroEcoSul.CardVertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chip="@string/dica4_tag"
            app:descricao="@string/dica4_descricao"
            app:imagem="@drawable/hero"
            app:titulo="@string/dica4_titulo" />

    </LinearLayout>
</ScrollView>